# FlashForge

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  index.html  init.sql  package-lock.json  package.json  pyproject.toml  tailwind.config.js  todo.md  vercel.json
apps/backend/: .env  BACKEND_IMPROVEMENTS.md  auth.py  config.py  database.py  exceptions.py  models.py  package.json  pyproject.toml  schemas.py  server.js  server.py
apps/frontend/: index.html  package-lock.json  package.json
apps/frontend/src/: App.tsx  index.css  main.tsx  types.ts
backend/: .env  package.json  server.js
client/: package-lock.json  package.json
client/src/: App.tsx  main.tsx
client/src/pages/: ChatRoom.tsx  Flashcards.tsx
flashforge/: __init__.py  __main__.py  config.py  errors.py  instance.py  logging_config.py  models.py  prompts.py  tools.py  utils.py
flashforge/tools/: __init__.py  deck.py  generate.py  health.py  persistence.py
server/: package-lock.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.ts
src/: App.css  App.tsx  index.css  index.html  main.tsx  types.ts
src/components/: AIResponse.tsx  App.tsx  ChatBox.tsx  ChatEntry.tsx  FileUpload.tsx  Flashcard.tsx  FlashcardView.tsx  Header.tsx  Login.tsx  Nav.tsx  Sidebar.tsx  UserQuery.tsx  navbar.tsx
src/constants/: prompts.ts
src/css/: App.css  ai-response.css  app.css  chat-box.css  chat-entry.css  content.css  flashcard.css  header.css  index.css  sidebar.css  user-query.css
src/routes/: LoginPage.tsx
src/types/: flashcard.ts
(+17 files in other folders)
