[project]
name = "flashforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "fastmcp>=3.1.1",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "python-json-logger>=2.0.7",
    "requests>=2.32.5",
]

[project.scripts]
flashforge = "flashforge.__main__:main"

[tool.uv]
package = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "flashforge"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | __pycache__
)/
'''

[tool.mypy]
python_version = 3.11
strict = true
disable_error_code = ["import-untyped"]
